@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 04c5b78f295019aa786aee2530e089bdc94809e8 ChangeLog
+SHA1 2b2f6b901b4964fc427426c8aa1ffc3fbc9b05a5 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 82e4697c84a0f78106a438580c5600b012d95090 META.yml
-SHA1 b3b80700fd167754359905457d87f9966c9803d7 Makefile.PL
+SHA1 52a6c9be53ab8d762ab9bd5ae6c24d343588bec1 META.yml
+SHA1 7a4683565676e6c87e19a630ada1eaee69f2bc8f Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 964e1512cff91e9f2459702f3191d61487881c9c lib/Net/FullAuto.pm
+SHA1 310a7f1ba424f30fdf806d3fb00c56e9d73bf5ba lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTpd9SAAoJEBa/9Pad787EapwIAMB4IVtTQGn6Qaak2xc485VZ
-SmgGcthyb3jF0w8sSnXuHIPHL3skVrKOh817gPKNJ3vQMPTnOWN4oMUpjOWqiL6G
-3dtVAIE4JmHMk3c5ODgBFKuLNBVDEl+RJiSpKfogr/6DrbGpITLRoJMEOUPssM58
-j8Iyh5AGKkdtnSXh4YV7hj3RXbJ/6vLpOToDC9BtgkwL11EiSs69UbZnFJ4wjbhR
-PcUNlay9GlcBEZXz7HN5SNEwh8NOOVDH8+Sg0UoHkvMpqxeq2b2T/ZsabayrN56/
-2UN2YCj+iQYoBbar/FnJPIeTb5UE58anJpxOyzBnFUaVxI0nFxC3HY503wgjVnE=
-=WiCk
+iQEcBAEBAgAGBQJTpsBQAAoJEBa/9Pad787E638IAIFBIjS4GVRSbFnTpZYXDJUo
+FhKQM+G28g+JSLTB/vzGXD+b2HP2IhVafOQrn/ndxkYSoGUxy+BIBzZp406TE2nh
+UyI+loFolHxzZAp+dPFSCzJ44roox3qmE8UsYf0+GkNVCWsgLJYmNnEribD0peew
+uAvVuT1GgHUaa3q4+XwEU9f4dkkhHbHjFw03kAaXuMsGL7/oG8TRwzXvuDUGEJGL
+GQ3SQNmQu2fwUXoLQQ/o0s/InlxPFSqE6OfGMwrbUHibRL8NoerfJ6ViH7Uw/V7u
+KgSmdPvs+MwM0PUCDt9dp2JYI7qwFPjQ3Z48MeZKXg+9DZJhE3VAbNh3x8bWsH0=
+=plQc
 -----END PGP SIGNATURE-----
